# CMake_practice

./: .gitignore  README.md
Demo/: README.md
Demo/Demo1/: CMakeLists.txt  README.md
Demo/Demo2/: README.md
Demo/Demo3/: README.md
Demo/Demo4/: README.md
Demo/Demo5/: README.md
Demo/Demo6/: README.md
Demo/Demo7/: README.md
Demo/Demo8/: README.md
h_step1/: CMakeLists.txt
step1/: CMakeLists.txt  test.cxx
step2/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
step4/: CMakeLists.txt  TutorialConfig.h.in
step4/MathFunctions/: CmakeLists.txt
step5/: CMakeLists.txt
step5/MathFunctions/: CmakeLists.txt  mysqrt.cxx
step6/MathFunctions/: CmakeLists.txt  MakeTable.cxx  mysqrt.cxx
step7/: tutorial.cxx
step7/MathFunctions/: CmakeLists.txt  MakeTable.cxx  mysqrt.cxx
